--- a/index.html
+++ b/index.html
@@ -9,9 +9,93 @@
   </head>
   <body>
     <div class="container">
-      <div class="sidebar"></div>
-      <div class="header"></div>
-      <div class="main"></div>
+      <div class="sidebar">
+        <div class="logo">
+          <img
+            src="Admin Dashboard Icons/dashboard-icon.png"
+            alt="dashboard icon"
+          />
+          <h1>Dashboard</h1>
+        </div>
+        <div class="sidebar-main">
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/home-icon.png"
+              alt="home icon"
+              class="icon"
+            />
+            <h2>Home</h2>
+          </div>
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/profile-icon.png"
+              alt="profile icon"
+              class="icon"
+            />
+            <h2>Profile</h2>
+          </div>
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/message-icon.png"
+              alt="message icon"
+              class="icon"
+            />
+            <h2>Messages</h2>
+          </div>
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/history-icon.png"
+              alt="history icon"
+              class="icon"
+            />
+            <h2>History</h2>
+          </div>
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/task-icons.png"
+              alt="task icon"
+              class="icon"
+            />
+            <h2>Tasks</h2>
+          </div>
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/communities-icon.png"
+              alt="communities icon"
+              class="icon"
+            />
+            <h2>Communities</h2>
+          </div>
+        </div>
+        <div class="sidebar-secondary">
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/settings-icon.png"
+              alt="settings icon"
+              class="icon"
+            />
+            <h2>Settings</h2>
+          </div>
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/support-icon.png"
+              alt="support icon"
+              class="icon"
+            />
+            <h2>Support</h2>
+          </div>
+          <div class="icon">
+            <img
+              src="Admin Dashboard Icons/privacy-icon.png"
+              alt="privacy icon"
+              class="icon"
+            />
+            <h2>Privacy</h2>
+          </div>
+        </div>
+        <div class="header"></div>
+        <div class="main"></div>
+      </div>
     </div>
   </body>
 </html>
