--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Archivo:wght@100;300;500&display=swap");
+    </style>
   </head>
   <body>
     <div class="container">
@@ -18,79 +21,79 @@
           <h1>Dashboard</h1>
         </div>
         <div class="sidebar-main">
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/home-icon.png"
               alt="home icon"
               class="icon"
             />
-            <h2>Home</h2>
+            <h3>Home</h3>
           </div>
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/profile-icon.png"
               alt="profile icon"
               class="icon"
             />
-            <h2>Profile</h2>
+            <h3>Profile</h3>
           </div>
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/message-icon.png"
               alt="message icon"
               class="icon"
             />
-            <h2>Messages</h2>
+            <h3>Messages</h3>
           </div>
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/history-icon.png"
               alt="history icon"
               class="icon"
             />
-            <h2>History</h2>
+            <h3>History</h3>
           </div>
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/task-icons.png"
               alt="task icon"
               class="icon"
             />
-            <h2>Tasks</h2>
+            <h3>Tasks</h3>
           </div>
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/communities-icon.png"
               alt="communities icon"
               class="icon"
             />
-            <h2>Communities</h2>
+            <h3>Communities</h3>
           </div>
         </div>
         <div class="sidebar-secondary">
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/settings-icon.png"
               alt="settings icon"
               class="icon"
             />
-            <h2>Settings</h2>
+            <h3>Settings</h3>
           </div>
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/support-icon.png"
               alt="support icon"
               class="icon"
             />
-            <h2>Support</h2>
+            <h3>Support</h3>
           </div>
-          <div class="icon">
+          <div class="item">
             <img
               src="Admin Dashboard Icons/privacy-icon.png"
               alt="privacy icon"
               class="icon"
             />
-            <h2>Privacy</h2>
+            <h3>Privacy</h3>
           </div>
         </div>
         <div class="header"></div>
