add header elements

--- a/index.html
+++ b/index.html
@@ -96,9 +96,41 @@
             <h3>Privacy</h3>
           </div>
         </div>
-        <div class="header"></div>
-        <div class="main"></div>
       </div>
+      <div class="header">
+        <div class="search">
+          <form action="">
+            <label for="searchBar">
+              <img
+                src="Admin Dashboard Icons/search-icon.png"
+                alt="search icon"
+                class="icon"
+              />
+              <input type="search" name="searchBar" id="searchBar" />
+            </label>
+          </form>
+        </div>
+        <div class="user">
+          <img
+            src="Admin Dashboard Icons/notification-icon.png"
+            alt="notification icon"
+            class="icon"
+          />
+          <img src="user-image.jpeg" alt="user image" class="user-icon" />
+          <h4>Kaori Kawakami</h4>
+        </div>
+        <div class="hello">
+          <img src="user-image.jpeg" alt="user image" class="user-icon" />
+          <p>Hi there,</p>
+          <h3>Kaori Kawakami (@Kaori)</h3>
+        </div>
+        <div class="buttons">
+          <button class="btn">New</button>
+          <button class="btn">Upload</button>
+          <button class="btn">Share</button>
+        </div>
+      </div>
+      <div class="main"></div>
     </div>
   </body>
 </html>
