--- a/index.html
+++ b/index.html
@@ -97,37 +97,40 @@
           </div>
         </div>
       </div>
+
       <div class="header">
-        <div class="search">
-          <form action="">
-            <label for="searchBar">
-              <img
-                src="Admin Dashboard Icons/search-icon.png"
-                alt="search icon"
-                class="icon"
+        <div class="header-top">
+          <div class="search">
+            <form action="">
+              <input
+                type="search"
+                name="searchBar"
+                id="searchBar"
+                placeholder="Search..."
               />
-              <input type="search" name="searchBar" id="searchBar" />
-            </label>
-          </form>
+            </form>
+          </div>
+          <div class="user">
+            <img
+              src="Admin Dashboard Icons/notification-icon.png"
+              alt="notification icon"
+              class="icon"
+            />
+            <img src="user-image.jpeg" alt="user image" class="user-icon" />
+            <h4>Kaori Kawakami</h4>
+          </div>
         </div>
-        <div class="user">
-          <img
-            src="Admin Dashboard Icons/notification-icon.png"
-            alt="notification icon"
-            class="icon"
-          />
-          <img src="user-image.jpeg" alt="user image" class="user-icon" />
-          <h4>Kaori Kawakami</h4>
-        </div>
-        <div class="hello">
-          <img src="user-image.jpeg" alt="user image" class="user-icon" />
-          <p>Hi there,</p>
-          <h3>Kaori Kawakami (@Kaori)</h3>
-        </div>
-        <div class="buttons">
-          <button class="btn">New</button>
-          <button class="btn">Upload</button>
-          <button class="btn">Share</button>
+        <div class="header-bottom">
+          <div class="hello">
+            <img src="user-image.jpeg" alt="user image" class="user-icon" />
+            <p>Hi there,</p>
+            <h3>Kaori Kawakami (@Kaori)</h3>
+          </div>
+          <div class="buttons">
+            <button class="btn">New</button>
+            <button class="btn">Upload</button>
+            <button class="btn">Share</button>
+          </div>
         </div>
       </div>
       <div class="main"></div>
