--- a/index.html
+++ b/index.html
@@ -116,15 +116,17 @@
               alt="notification icon"
               class="icon"
             />
-            <img src="user-image.jpeg" alt="user image" class="user-icon" />
+            <img src="user-image.jpeg" alt="user image" class="user-icon-sm" />
             <h4>Kaori Kawakami</h4>
           </div>
         </div>
         <div class="header-bottom">
           <div class="hello">
             <img src="user-image.jpeg" alt="user image" class="user-icon" />
-            <p>Hi there,</p>
-            <h3>Kaori Kawakami (@Kaori)</h3>
+            <div class="h-text">
+              <p>Hi there,</p>
+              <h3>Kaori Kawakami (@Kaori)</h3>
+            </div>
           </div>
           <div class="buttons">
             <button class="btn">New</button>
@@ -133,7 +135,236 @@
           </div>
         </div>
       </div>
-      <div class="main"></div>
+      <div class="main">
+        <div class="projects">
+          <h3>Your Projects</h3>
+          <div class="card">
+            <h4>Super Cool Project</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
+              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
+              dolore corporis possimus.
+            </p>
+            <img
+              src="Admin Dashboard Icons/star-icon.png"
+              alt="star icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/seen-icon.png"
+              alt="seen icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/share-icon.png"
+              alt="share icon"
+              class="small-icon"
+            />
+          </div>
+          <div class="card">
+            <h4>Less Cool Project</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
+              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
+              dolore corporis possimus.
+            </p>
+            <img
+              src="Admin Dashboard Icons/star-icon.png"
+              alt="star icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/seen-icon.png"
+              alt="seen icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/share-icon.png"
+              alt="share icon"
+              class="small-icon"
+            />
+          </div>
+          <div class="card">
+            <h4>Impossible App</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
+              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
+              dolore corporis possimus.
+            </p>
+            <img
+              src="Admin Dashboard Icons/star-icon.png"
+              alt="star icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/seen-icon.png"
+              alt="seen icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/share-icon.png"
+              alt="share icon"
+              class="small-icon"
+            />
+          </div>
+          <div class="card">
+            <h4>Easy Peasy App</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
+              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
+              dolore corporis possimus.
+            </p>
+            <img
+              src="Admin Dashboard Icons/star-icon.png"
+              alt="star icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/seen-icon.png"
+              alt="seen icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/share-icon.png"
+              alt="share icon"
+              class="small-icon"
+            />
+          </div>
+          <div class="card">
+            <h4>Ad Blocker</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
+              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
+              dolore corporis possimus.
+            </p>
+            <img
+              src="Admin Dashboard Icons/star-icon.png"
+              alt="star icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/seen-icon.png"
+              alt="seen icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/share-icon.png"
+              alt="share icon"
+              class="small-icon"
+            />
+          </div>
+          <div class="card">
+            <h4>Money Maker</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
+              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
+              dolore corporis possimus.
+            </p>
+            <img
+              src="Admin Dashboard Icons/star-icon.png"
+              alt="star icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/seen-icon.png"
+              alt="seen icon"
+              class="small-icon"
+            />
+            <img
+              src="Admin Dashboard Icons/share-icon.png"
+              alt="share icon"
+              class="small-icon"
+            />
+          </div>
+        </div>
+        <div class="announcements">
+          <h3>Announcements</h3>
+          <div class="announcement-card">
+            <div>
+              <h5>Site Maintenance</h5>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Possimus reiciendis accusamus hic recusandae quae quo commodi
+                dicta expedita optio ipsa, voluptatibus et mollitia. Ipsa,
+                distinctio! Soluta sed tempora obcaecati placeat.
+              </p>
+            </div>
+            <div>
+              <h5>Community Share Day</h5>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Possimus reiciendis accusamus hic recusandae quae quo commodi
+                dicta expedita optio ipsa, voluptatibus et mollitia. Ipsa,
+                distinctio! Soluta sed tempora obcaecati placeat.
+              </p>
+            </div>
+            <div>
+              <h5>Updated Privacy Policy</h5>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Possimus reiciendis accusamus hic recusandae quae quo commodi
+                dicta expedita optio ipsa, voluptatibus et mollitia. Ipsa,
+                distinctio! Soluta sed tempora obcaecati placeat.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="trending">
+          <h3>Trending</h3>
+          <div class="trending-card">
+            <div class="user-tag">
+              <img
+                src="user-image.jpeg"
+                alt="user image 1"
+                class="user-icon-sm"
+              />
+              <div class="user-tag-text">
+                <h5>@tegan</h5>
+                <p>World Peace Builder</p>
+              </div>
+            </div>
+            <div class="user-tag">
+              <img
+                src="user-image.jpeg"
+                alt="user image 2"
+                class="user-icon-sm"
+              />
+              <div class="user-tag-text">
+                <h5>@morgan</h5>
+                <p>Super Cool Project</p>
+              </div>
+            </div>
+            <div class="user-tag">
+              <img
+                src="user-image.jpeg"
+                alt="user image 3"
+                class="user-icon-sm"
+              />
+              <div class="user-tag-text">
+                <h5>@kendall</h5>
+                <p>Life Changing App</p>
+              </div>
+            </div>
+            <div class="user-tag">
+              <img
+                src="user-image.jpeg"
+                alt="user image 4"
+                class="user-icon-sm"
+              />
+              <div class="user-tag-text">
+                <h5>@alex</h5>
+                <p>No Traffic Maker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
