--- a/index.html
+++ b/index.html
@@ -6,365 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Archivo:wght@100;300;500&display=swap");
-    </style>
   </head>
-  <body>
-    <div class="container">
-      <div class="sidebar">
-        <div class="logo">
-          <img
-            src="Admin Dashboard Icons/dashboard-icon.png"
-            alt="dashboard icon"
-          />
-          <h1>Dashboard</h1>
-        </div>
-        <div class="sidebar-main">
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/home-icon.png"
-              alt="home icon"
-              class="icon"
-            />
-            <h3>Home</h3>
-          </div>
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/profile-icon.png"
-              alt="profile icon"
-              class="icon"
-            />
-            <h3>Profile</h3>
-          </div>
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/message-icon.png"
-              alt="message icon"
-              class="icon"
-            />
-            <h3>Messages</h3>
-          </div>
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/history-icon.png"
-              alt="history icon"
-              class="icon"
-            />
-            <h3>History</h3>
-          </div>
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/task-icons.png"
-              alt="task icon"
-              class="icon"
-            />
-            <h3>Tasks</h3>
-          </div>
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/communities-icon.png"
-              alt="communities icon"
-              class="icon"
-            />
-            <h3>Communities</h3>
-          </div>
-        </div>
-        <div class="sidebar-secondary">
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/settings-icon.png"
-              alt="settings icon"
-              class="icon"
-            />
-            <h3>Settings</h3>
-          </div>
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/support-icon.png"
-              alt="support icon"
-              class="icon"
-            />
-            <h3>Support</h3>
-          </div>
-          <div class="item">
-            <img
-              src="Admin Dashboard Icons/privacy-icon.png"
-              alt="privacy icon"
-              class="icon"
-            />
-            <h3>Privacy</h3>
-          </div>
-        </div>
-      </div>
-
-      <div class="header">
-        <div class="header-top">
-          <div class="search">
-            <form action="">
-              <input
-                type="search"
-                name="searchBar"
-                id="searchBar"
-                placeholder="Search..."
-              />
-            </form>
-          </div>
-          <div class="user">
-            <img
-              src="Admin Dashboard Icons/notification-icon.png"
-              alt="notification icon"
-              class="icon"
-            />
-            <img src="user-image.jpeg" alt="user image" class="user-icon-sm" />
-            <h4>Kaori Kawakami</h4>
-          </div>
-        </div>
-        <div class="header-bottom">
-          <div class="hello">
-            <img src="user-image.jpeg" alt="user image" class="user-icon" />
-            <div class="h-text">
-              <p>Hi there,</p>
-              <h3>Kaori Kawakami (@Kaori)</h3>
-            </div>
-          </div>
-          <div class="buttons">
-            <button class="btn">New</button>
-            <button class="btn">Upload</button>
-            <button class="btn">Share</button>
-          </div>
-        </div>
-      </div>
-      <div class="main">
-        <div class="projects">
-          <h3>Your Projects</h3>
-          <div class="card">
-            <h4>Super Cool Project</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
-              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
-              dolore corporis possimus.
-            </p>
-            <img
-              src="Admin Dashboard Icons/star-icon.png"
-              alt="star icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/seen-icon.png"
-              alt="seen icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/share-icon.png"
-              alt="share icon"
-              class="small-icon"
-            />
-          </div>
-          <div class="card">
-            <h4>Less Cool Project</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
-              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
-              dolore corporis possimus.
-            </p>
-            <img
-              src="Admin Dashboard Icons/star-icon.png"
-              alt="star icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/seen-icon.png"
-              alt="seen icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/share-icon.png"
-              alt="share icon"
-              class="small-icon"
-            />
-          </div>
-          <div class="card">
-            <h4>Impossible App</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
-              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
-              dolore corporis possimus.
-            </p>
-            <img
-              src="Admin Dashboard Icons/star-icon.png"
-              alt="star icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/seen-icon.png"
-              alt="seen icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/share-icon.png"
-              alt="share icon"
-              class="small-icon"
-            />
-          </div>
-          <div class="card">
-            <h4>Easy Peasy App</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
-              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
-              dolore corporis possimus.
-            </p>
-            <img
-              src="Admin Dashboard Icons/star-icon.png"
-              alt="star icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/seen-icon.png"
-              alt="seen icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/share-icon.png"
-              alt="share icon"
-              class="small-icon"
-            />
-          </div>
-          <div class="card">
-            <h4>Ad Blocker</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
-              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
-              dolore corporis possimus.
-            </p>
-            <img
-              src="Admin Dashboard Icons/star-icon.png"
-              alt="star icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/seen-icon.png"
-              alt="seen icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/share-icon.png"
-              alt="share icon"
-              class="small-icon"
-            />
-          </div>
-          <div class="card">
-            <h4>Money Maker</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-              sequi nihil ullam repellendus eaque nostrum debitis dignissimos
-              ipsam autem sint aut cupiditate nobis, optio esse illum ratione
-              dolore corporis possimus.
-            </p>
-            <img
-              src="Admin Dashboard Icons/star-icon.png"
-              alt="star icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/seen-icon.png"
-              alt="seen icon"
-              class="small-icon"
-            />
-            <img
-              src="Admin Dashboard Icons/share-icon.png"
-              alt="share icon"
-              class="small-icon"
-            />
-          </div>
-        </div>
-        <div class="announcements">
-          <h3>Announcements</h3>
-          <div class="announcement-card">
-            <div>
-              <h5>Site Maintenance</h5>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Possimus reiciendis accusamus hic recusandae quae quo commodi
-                dicta expedita optio ipsa, voluptatibus et mollitia. Ipsa,
-                distinctio! Soluta sed tempora obcaecati placeat.
-              </p>
-            </div>
-            <div>
-              <h5>Community Share Day</h5>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Possimus reiciendis accusamus hic recusandae quae quo commodi
-                dicta expedita optio ipsa, voluptatibus et mollitia. Ipsa,
-                distinctio! Soluta sed tempora obcaecati placeat.
-              </p>
-            </div>
-            <div>
-              <h5>Updated Privacy Policy</h5>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Possimus reiciendis accusamus hic recusandae quae quo commodi
-                dicta expedita optio ipsa, voluptatibus et mollitia. Ipsa,
-                distinctio! Soluta sed tempora obcaecati placeat.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="trending">
-          <h3>Trending</h3>
-          <div class="trending-card">
-            <div class="user-tag">
-              <img
-                src="user-image.jpeg"
-                alt="user image 1"
-                class="user-icon-sm"
-              />
-              <div class="user-tag-text">
-                <h5>@tegan</h5>
-                <p>World Peace Builder</p>
-              </div>
-            </div>
-            <div class="user-tag">
-              <img
-                src="user-image.jpeg"
-                alt="user image 2"
-                class="user-icon-sm"
-              />
-              <div class="user-tag-text">
-                <h5>@morgan</h5>
-                <p>Super Cool Project</p>
-              </div>
-            </div>
-            <div class="user-tag">
-              <img
-                src="user-image.jpeg"
-                alt="user image 3"
-                class="user-icon-sm"
-              />
-              <div class="user-tag-text">
-                <h5>@kendall</h5>
-                <p>Life Changing App</p>
-              </div>
-            </div>
-            <div class="user-tag">
-              <img
-                src="user-image.jpeg"
-                alt="user image 4"
-                class="user-icon-sm"
-              />
-              <div class="user-tag-text">
-                <h5>@alex</h5>
-                <p>No Traffic Maker</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
