add all elements for sidebar header and main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,281 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Archivo:wght@100;300;500&display=swap");
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="sidebar">
+      <img
+        src="Admin Dashboard Icons/dashboard-icon.png"
+        alt="dashboard icon"
+        class="icon"
+      />
+      <h1>Dashbaord</h1>
+      <img
+        src="Admin Dashboard Icons/home-icon.png"
+        alt="home icon"
+        class="icon"
+      />
+      <h2>Home</h2>
+      <img
+        src="Admin Dashboard Icons/profile-icon.png"
+        alt="profile icon"
+        class="icon"
+      />
+      <h2>Profile</h2>
+      <img
+        src="Admin Dashboard Icons/message-icon.png"
+        alt="message icon"
+        class="icon"
+      />
+      <h2>Messages</h2>
+      <img
+        src="Admin Dashboard Icons/history-icon.png"
+        alt="history icon"
+        class="icon"
+      />
+      <h2>History</h2>
+      <img
+        src="Admin Dashboard Icons/task-icons.png"
+        alt="task icon"
+        class="icon"
+      />
+      <h2>Tasks</h2>
+      <img
+        src="Admin Dashboard Icons/communities-icon.png"
+        alt="communities icon"
+        class="icon"
+      />
+      <h2>Communities</h2>
+      <img
+        src="Admin Dashboard Icons/settings-icon.png"
+        alt="settings icon"
+        class="icon"
+      />
+      <h2>Settings</h2>
+      <img
+        src="Admin Dashboard Icons/support-icon.png"
+        alt="support icon"
+        class="icon"
+      />
+      <h2>Support</h2>
+      <img
+        src="Admin Dashboard Icons/privacy-icon.png"
+        alt="privacy icon"
+        class="icon"
+      />
+      <h2>Privacy</h2>
+    </div>
+    <div class="header">
+      <form action="">
+        <input
+          type="search"
+          name="search"
+          id="search"
+          placeholder="Search..."
+        />
+      </form>
+      <img
+        src="Admin Dashboard Icons/notification-icon.png"
+        alt="notification icon"
+        class="icon"
+      />
+      <img src="user-image-1.jpeg" alt="user image 1" class="user-icon" />
+      <h4>Kaori Kawakami</h4>
+      <img src="user-image-1.jpeg" alt="user image 1" class="user-icon" />
+      <p>Hi there,</p>
+      <h3>Kaori Kawakami (@kaori)</h3>
+      <button class="btn">New</button>
+      <button class="btn">Upload</button>
+      <button class="btn">Share</button>
+    </div>
+    <div class="main">
+      <div class="projects">
+        <h4>Your Projects</h4>
+        <div class="card">
+          <h5>Super Cool Project</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            explicabo nobis dolores vitae a iure quod earum ipsam dicta
+            voluptatibus. Ut suscipit sapiente sint nam amet qui perspiciatis ea
+            explicabo?
+          </p>
+          <img
+            src="Admin Dashboard Icons/star-icon.png"
+            alt="star icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/seen-icon.png"
+            alt="seen icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/share-icon.png"
+            alt="share icon"
+            class="card-icon"
+          />
+        </div>
+        <div class="card">
+          <h5>Less Cool Project</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            explicabo nobis dolores vitae a iure quod earum ipsam dicta
+            voluptatibus. Ut suscipit sapiente sint nam amet qui perspiciatis ea
+            explicabo?
+          </p>
+          <img
+            src="Admin Dashboard Icons/star-icon.png"
+            alt="star icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/seen-icon.png"
+            alt="seen icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/share-icon.png"
+            alt="share icon"
+            class="card-icon"
+          />
+        </div>
+        <div class="card">
+          <h5>Impossible App</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            explicabo nobis dolores vitae a iure quod earum ipsam dicta
+            voluptatibus. Ut suscipit sapiente sint nam amet qui perspiciatis ea
+            explicabo?
+          </p>
+          <img
+            src="Admin Dashboard Icons/star-icon.png"
+            alt="star icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/seen-icon.png"
+            alt="seen icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/share-icon.png"
+            alt="share icon"
+            class="card-icon"
+          />
+        </div>
+        <div class="card">
+          <h5>Easy Peasy App</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            explicabo nobis dolores vitae a iure quod earum ipsam dicta
+            voluptatibus. Ut suscipit sapiente sint nam amet qui perspiciatis ea
+            explicabo?
+          </p>
+          <img
+            src="Admin Dashboard Icons/star-icon.png"
+            alt="star icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/seen-icon.png"
+            alt="seen icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/share-icon.png"
+            alt="share icon"
+            class="card-icon"
+          />
+        </div>
+        <div class="card">
+          <h5>Ad Blocker</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            explicabo nobis dolores vitae a iure quod earum ipsam dicta
+            voluptatibus. Ut suscipit sapiente sint nam amet qui perspiciatis ea
+            explicabo?
+          </p>
+          <img
+            src="Admin Dashboard Icons/star-icon.png"
+            alt="star icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/seen-icon.png"
+            alt="seen icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/share-icon.png"
+            alt="share icon"
+            class="card-icon"
+          />
+        </div>
+        <div class="card">
+          <h5>Money Maker</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            explicabo nobis dolores vitae a iure quod earum ipsam dicta
+            voluptatibus. Ut suscipit sapiente sint nam amet qui perspiciatis ea
+            explicabo?
+          </p>
+          <img
+            src="Admin Dashboard Icons/star-icon.png"
+            alt="star icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/seen-icon.png"
+            alt="seen icon"
+            class="card-icon"
+          />
+          <img
+            src="Admin Dashboard Icons/share-icon.png"
+            alt="share icon"
+            class="card-icon"
+          />
+        </div>
+      </div>
+      <div class="announcements">
+        <h6>Site Maintenance</h6>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, rem
+          est quidem, corrupti nihil debitis ipsa unde quam hic quae pariatur
+          cumque sunt perferendis esse perspiciatis voluptatem earum recusandae
+          excepturi.
+        </p>
+        <h6>Community Share Day</h6>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, rem
+          est quidem, corrupti nihil debitis ipsa unde quam hic quae pariatur
+          cumque sunt perferendis esse perspiciatis voluptatem earum recusandae
+          excepturi.
+        </p>
+        <h6>Updated Privacy Policy</h6>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, rem
+          est quidem, corrupti nihil debitis ipsa unde quam hic quae pariatur
+          cumque sunt perferendis esse perspiciatis voluptatem earum recusandae
+          excepturi.
+        </p>
+      </div>
+      <div class="trending">
+        <img src="user-image-2.jpeg" alt="user-image 2" class="user-icon" />
+        <h6>@tegan</h6>
+        <p>World Peace Builder</p>
+        <img src="user-image-1.jpeg" alt="user-image 1" class="user-icon" />
+        <h6>@kaori</h6>
+        <p>Super Cool Project</p>
+        <img src="user-image-3.jpeg" alt="user-image 3" class="user-icon" />
+        <h6>@kendall</h6>
+        <p>Life Changing App</p>
+        <img src="user-image-4.jpeg" alt="user-image 4" class="user-icon" />
+        <h6>@alex</h6>
+        <p>No Traffic Maker</p>
+      </div>
+    </div>
+  </body>
 </html>
