update trending section

--- a/index.html
+++ b/index.html
@@ -285,25 +285,31 @@
         </div>
         <div class="trending">
           <h4>Trending</h4>
-          <img src="user-image-2.jpeg" alt="user-image 2" class="user-icon" />
-          <div>
-            <h5>@tegan</h5>
-            <p>World Peace Builder</p>
-          </div>
-          <img src="user-image-1.jpeg" alt="user-image 1" class="user-icon" />
-          <div>
-            <h5>@kaori</h5>
-            <p>Super Cool Project</p>
-          </div>
-          <img src="user-image-3.jpeg" alt="user-image 3" class="user-icon" />
-          <div>
-            <h5>@kendall</h5>
-            <p>Life Changing App</p>
-          </div>
-          <img src="user-image-4.jpeg" alt="user-image 4" class="user-icon-4" />
-          <div>
-            <h5>@alex</h5>
-            <p>No Traffic Maker</p>
+          <div class="trending-card">
+            <img src="user-image-2.jpeg" alt="user-image 2" class="user-icon" />
+            <div>
+              <h5>@tegan</h5>
+              <p>World Peace Builder</p>
+            </div>
+            <img src="user-image-1.jpeg" alt="user-image 1" class="user-icon" />
+            <div>
+              <h5>@kaori</h5>
+              <p>Super Cool Project</p>
+            </div>
+            <img src="user-image-3.jpeg" alt="user-image 3" class="user-icon" />
+            <div>
+              <h5>@kendall</h5>
+              <p>Life Changing App</p>
+            </div>
+            <img
+              src="user-image-4.jpeg"
+              alt="user-image 4"
+              class="user-icon-4"
+            />
+            <div>
+              <h5>@alex</h5>
+              <p>No Traffic Maker</p>
+            </div>
           </div>
         </div>
       </div>
