sidebar grid complete

--- a/index.html
+++ b/index.html
@@ -13,66 +13,72 @@
   <body>
     <div class="container">
       <div class="sidebar">
-        <img
-          src="Admin Dashboard Icons/dashboard-icon.png"
-          alt="dashboard icon"
-          class="icon"
-        />
-        <h1>Dashboard</h1>
-        <img
-          src="Admin Dashboard Icons/home-icon.png"
-          alt="home icon"
-          class="icon"
-        />
-        <h2>Home</h2>
-        <img
-          src="Admin Dashboard Icons/profile-icon.png"
-          alt="profile icon"
-          class="icon"
-        />
-        <h2>Profile</h2>
-        <img
-          src="Admin Dashboard Icons/message-icon.png"
-          alt="message icon"
-          class="icon"
-        />
-        <h2>Messages</h2>
-        <img
-          src="Admin Dashboard Icons/history-icon.png"
-          alt="history icon"
-          class="icon"
-        />
-        <h2>History</h2>
-        <img
-          src="Admin Dashboard Icons/task-icons.png"
-          alt="task icon"
-          class="icon"
-        />
-        <h2>Tasks</h2>
-        <img
-          src="Admin Dashboard Icons/communities-icon.png"
-          alt="communities icon"
-          class="icon"
-        />
-        <h2>Communities</h2>
-        <img
-          src="Admin Dashboard Icons/settings-icon.png"
-          alt="settings icon"
-          class="icon"
-        />
-        <h2>Settings</h2>
-        <img
-          src="Admin Dashboard Icons/support-icon.png"
-          alt="support icon"
-          class="icon"
-        />
-        <h2>Support</h2>
-        <img
-          src="Admin Dashboard Icons/privacy-icon.png"
-          alt="privacy icon"
-          class="icon"
-        />
-        <h2>Privacy</h2>
+        <div class="sidebar-logo">
+          <img
+            src="Admin Dashboard Icons/dashboard-icon.png"
+            alt="dashboard icon"
+            class="icon"
+          />
+          <h1>Dashboard</h1>
+        </div>
+        <div class="sidebar-main">
+          <img
+            src="Admin Dashboard Icons/home-icon.png"
+            alt="home icon"
+            class="icon"
+          />
+          <h2>Home</h2>
+          <img
+            src="Admin Dashboard Icons/profile-icon.png"
+            alt="profile icon"
+            class="icon"
+          />
+          <h2>Profile</h2>
+          <img
+            src="Admin Dashboard Icons/message-icon.png"
+            alt="message icon"
+            class="icon"
+          />
+          <h2>Messages</h2>
+          <img
+            src="Admin Dashboard Icons/history-icon.png"
+            alt="history icon"
+            class="icon"
+          />
+          <h2>History</h2>
+          <img
+            src="Admin Dashboard Icons/task-icons.png"
+            alt="task icon"
+            class="icon"
+          />
+          <h2>Tasks</h2>
+          <img
+            src="Admin Dashboard Icons/communities-icon.png"
+            alt="communities icon"
+            class="icon"
+          />
+          <h2>Communities</h2>
+        </div>
+        <div class="sidebar-secondary">
+          <img
+            src="Admin Dashboard Icons/settings-icon.png"
+            alt="settings icon"
+            class="icon"
+          />
+          <h2>Settings</h2>
+          <img
+            src="Admin Dashboard Icons/support-icon.png"
+            alt="support icon"
+            class="icon"
+          />
+          <h2>Support</h2>
+          <img
+            src="Admin Dashboard Icons/privacy-icon.png"
+            alt="privacy icon"
+            class="icon"
+          />
+          <h2>Privacy</h2>
+        </div>
       </div>
       <div class="header">
         <div class="head-top">
@@ -301,11 +307,7 @@
               <h5>@kendall</h5>
               <p>Life Changing App</p>
             </div>
-            <img
-              src="user-image-4.jpeg"
-              alt="user-image 4"
-              class="user-icon-4"
-            />
+            <img src="user-image-4.jpeg" alt="user-image 4" class="user-icon" />
             <div>
               <h5>@alex</h5>
               <p>No Traffic Maker</p>
