header grid complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             alt="dashboard icon"
             class="icon"
           />
-          <h1>Dashboard</h1>
+          <h2>Dashboard</h2>
         </div>
         <div class="sidebar-main">
           <img
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="header">
-        <div class="head-top">
+        <div class="search">
           <form action="">
             <input
               type="search"
@@ -90,6 +90,8 @@
               placeholder="Search..."
             />
           </form>
+        </div>
+        <div class="notification">
           <img
             src="Admin Dashboard Icons/notification-icon.png"
             alt="notification icon"
@@ -98,12 +100,15 @@
           <img src="user-image-1.jpeg" alt="user image 1" class="user-icon" />
           <h4>Kaori Kawakami</h4>
         </div>
-        <div class="head-bottom">
+
+        <div class="hello-there">
           <img src="user-image-1.jpeg" alt="user image 1" class="user-icon" />
           <div>
-            <p>Hi there,</p>
+            <p>Hello there,</p>
             <h3>Kaori Kawakami (@kaori)</h3>
           </div>
+        </div>
+        <div class="buttons">
           <button class="btn">New</button>
           <button class="btn">Upload</button>
           <button class="btn">Share</button>
